--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomeDepot.com/MyCard - Manage Your Credit Card</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P7DZRTP96B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P7DZRTP96B');
+</script>
+
+  
+ <meta name="description" content="Access homedepot.com/mycard to securely pay bills, check balances, and manage your Home Depot credit card account anytime, anywhere.">
+<meta name="keywords" content="Homedepot.com/mycard, Home Depot credit card, pay Home Depot card bill, Home Depot card login, Home Depot account management">
+ 
     <style>
         body {
             margin: 0;
