--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
         .content ul {
             margin-left: 20px;
         }
+         /* Footer */
+        .footer {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            margin-top: 40px;
+        }
     </style>
 </head>
 
@@ -208,6 +216,10 @@
         <p>With homedepot.com/mycard, managing your Home Depot credit card has never been easier.
             From paying bills online to monitoring transactions, everything is just a few clicks away.
             Register today and take control of your Home Depot credit card account.</p>
+    <!-- Footer -->
+    <div class="footer">
+        <p>This site is reversed by Homedepot.com/mycard</p>
+    </div>
 
 
     </div>
