--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@
             From paying bills online to monitoring transactions, everything is just a few clicks away.
             Register today and take control of your Home Depot credit card account.</p>
     <!-- Footer -->
-    <div class="footer">
-        <p>This site is reversed by Homedepot.com/mycard</p>
+  
+
     </div>
-
-
+    <!-- Footer -->
+    <div class="footer">
+        <p>© 2025 Homedepot help guide • All Rights Reserved.</p>
     </div>
 
 </body>
